--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "init": "^0.1.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "json-server": "^0.17.1"
   },
   "name": "project",
